# USTC

./: README.md
微机原理/: README.md
操作系统/: README.md  (+1 more)
数据结构/: 2019秋sjjg考题：.md  (+1 more)
编译原理/compiler_cminus/lab1_lexical_analyzer/: .gitignore  CMakeLists.txt  Flex简单使用.md  README.md  TA-score  TA-score-update191012  lexical_analyzer.l  test_lex.c  评分标准.md
编译原理/compiler_cminus/lab1_lexical_analyzer/Sharing/: README.md  gcd.c
编译原理/compiler_cminus/lab1_lexical_analyzer/doc/: lab1-introduction.md
编译原理/compiler_cminus/lab1_lexical_analyzer/testcase/: lab2_SHOULD_FAIL_array-decl-with-expression.cminus  lab2_SHOULD_FAIL_function-decl.cminus  lab2_SHOULD_FAIL_middle-declaration.cminus  lab2_SHOULD_FAIL_var-decl-with-value.cminus  lab2_array.cminus  lab2_call.cminus  lab2_expression-assign.cminus  lab2_local-declarations.cminus  lab2_param-list.cminus  multiline.cminus
编译原理/compiler_cminus/lab2_syntax_analyzer/: Bison_Tutorial.md  CMakeLists.txt  README.md  TA-score  syntax_analyzer.y  test_syntax.c
编译原理/compiler_cminus/lab2_syntax_analyzer/TA_syntree/: array.syntax_tree  gcd.syntax_tree  lab2_array.syntax_tree  lab2_call.syntax_tree  lab2_expression-assign.syntax_tree  lab2_local-declarations.syntax_tree  lab2_mathematics.syntax_tree  lab2_param-list.syntax_tree  lab2_relop.syntax_tree  lab2_selection-stmt.syntax_tree  selectionsort.syntax_tree  wired_comment.syntax_tree
编译原理/compiler_cminus/lab2_syntax_analyzer/doc/: PB17111623_lab2.md
编译原理/compiler_cminus/lab3-1/: .gitignore  CMakeLists.txt  README.md  TA-tests-score
编译原理/compiler_cminus/lab3-1/docs/: cminus.md  design.md
编译原理/compiler_cminus/lab3-1/include/: cminus_builder.hpp  syntax_tree.hpp
编译原理/compiler_cminus/lab3-1/report/: contribution.md  lab3-1_report.md  records.md
编译原理/compiler_cminus/lab3-1/src/cminusc/: CMakeLists.txt  cminus_builder.cpp  main.cpp
编译原理/compiler_cminus/lab3-1/src/io/: CMakeLists.txt  io.c
编译原理/compiler_cminus/lab3-1/src/syntax_tree_cpp/: CMakeLists.txt  syntax_tree.cpp
编译原理/compiler_cminus/lab3-1/testcase/: gcd.cminus
编译原理/compiler_cminus/lab3-1/tests/: CMakeLists.txt  test_syntax_tree.cpp
(+7525 files in other folders)
